commit for 20130323XX.jar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,7 +301,7 @@
                 ]]>
     </string>
 
-    <string name="rf_2013032201"><![CDATA[
+    <string name="rf_2013032301"><![CDATA[
             <html>
             <head>
             <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -330,6 +330,7 @@
             </li>
             <li>
             Навигация по треду. Если тред достаточно длинный, включается специальный управляющий паровоз. Немного неканоничный гуй, зато нескучный.
+            Тяжкие последствия недавнего знакомства автора с программированием под гейфон.
             </li>
             <li>
             Из старого (но не проходившего еще в новостях) - возможность сообщать не все нотификации о новых мессагах и комментах,
