--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -178,6 +178,7 @@
     <string name="navigationPrivate">Private(web)</string>
     <string name="navigationDiscuss">Discuss.(web)</string>
     <string name="navigationUnread">All-unread</string>
+    <string name="navigationUnanswered">Unanswered</string>
     <string name="navigationSaved">Saved messages</string>
     <string name="SingleLine_Menu">Single line menu items</string>
     <string name="SingleLine_Menu_Summary">Menu will be even more compact</string>
@@ -301,7 +302,7 @@
                 ]]>
     </string>
 
-    <string name="rf_2013032301"><![CDATA[
+    <string name="rf_2013041201"><![CDATA[
             <html>
             <head>
             <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -314,8 +315,17 @@
             <body>
 
             <form>
-            <b>Март 2013, зимний билд</b>
+            <b>Апрель 2013, зимний билд</b>
             <ul>
+            <li>
+            Забацал \"Неотвеченные\", ура! Сканирует последний месяц вашей активности, и если находит или чужой коммент на ваш пост, или чужой ответ на ваш коммент,
+            на которые не было вашего ответа с тех пор, и показывает в списке. Последние 20 штук, самые поздние - наверху. Если ткнуть - быстро открывается форма для того чтобы написать ответ.
+            Если мессаг не предполагает ответа - его выкинуть пальцем вправо за пределы экрана, чтобы уведомление о нем не появлялось больше на глаза.
+            Включить: <input type="checkbox" name="prefs.msrcUnanswered" #prefs.checked.msrcUnanswered#>
+            </li>
+            <li>
+            В поиске теперь можно вводить #12345 или @Vasya, откроется соответственно пост или все посты юзера.
+            </li>
             <li>
             Весьма оптимизирована производительность UI, картинки не моргают, всё скроллируется еще плавнее, должно хорошо отразиться и на батарейке. Добавлен двойной клик на картинки,
             который теперь показывает картинку целиком (не перезакачивая ее), и ее можно увеличивать двумя пальцами. Также кнопка \"скачать оригинал\" посредством
@@ -714,70 +724,80 @@
             На сервер <b><i>juick.com</i></b> ходят следующие данные:
             <ul>
             <li>
-            Посты которые вы читаете и пишете, вместе с вашей идентификацией
+            1.1 Посты которые вы читаете и пишете, вместе с вашей идентификацией
             </li>
             <li>
-            Картинки и геолокация, если таковая используется вами в ваших постах или комментах.
+            1.2 Картинки и геолокация, если таковая используется вами в ваших постах или комментах.
             </li>
             <li>
-            Короче, всё ходит.
+            1.3 Короче, всё ходит.
             </li>
             </ul>
 
+            2.1 На сервер <b><i>jugregator.com</i></b> ходят запросы на срачики, без вашей жуйковской идентификации.
             <br>
             <br>
-            На сервер <b><i>jugregator.com</i></b> ходят запросы на срачики, без вашей жуйковской идентификации.
-            <br>
-            <br>
-            На сервера <b><i>проксей картинок</i></b> уходят запросы на картинки с вашей авторизацией для прокси,
+            3.1 На сервера <b><i>проксей картинок</i></b> уходят запросы на картинки с вашей авторизацией для прокси,
             если она есть, если вы насетапили прокси для картинок.
 
             <br>
             <br>
-            На <b><i>Google Docs</i></b> уходит информация о падениях программы, в том виде в котором ее отправляет
+            4.1 На <b><i>Google Docs</i></b> уходит информация о падениях программы, в том виде в котором ее отправляет
             ACRA (тулза для отправления сообщений об ошибке), туда уходят много параметров системы, полезных для обнаружения ошибок.
             <br>
             <br>
              Кроме того, только если вы разрешили анонимную статистику, то на сервер <b><i>ja.ip.rt.ru</b></i> уходит 2-3 раза неделю или реже:
             <ul>
             <li>
-            Уникальный номер инсталляляции, который состоит из MD5 хеша идентификатора вашего девайса
+            5.1 Уникальный номер инсталляляции, который состоит из MD5 хеша идентификатора вашего девайса
             (чтобы он не засветился наружу или мне) и даты инсталляции программы. Идентификатор строится
             из wifi mac address и Settings.Secure.ANDROID_ID, который сгенерился случайно в момент инсталляции android.
             </li>
             <li>
-            Количество проведенного в ленте времени, по каждому разделу.
+            5.2 Количество проведенного в ленте времени, по каждому разделу.
             </li>
             <li>
-            Активизированные фичи в настройках.
+            5.3 Активизированные фичи в настройках.
             </li>
             <li>
-            Модель телефона, размер экрана.
+            5.4 Модель телефона, размер экрана.
             </li>
             </ul>
             Больше на эту тему ничего не отправляется.
             Отправляемые данные занимают около 1КБ.
             <br>
             <br>
-            На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
-             в случаях, когда сервер может заменить juick.com, только если вы настроили это. Для получения этой информации
-             туда не уходит ваша авторизация, и поэтому запросы на вашу персональную ленту сервер не обрабатывает.
-             Запросы за графиками тоже ходят туда.
+            6.1 На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
+             в случаях, если вы настроили его как "резервный сервер", что было актуальным некоторый период времени когда основной сервер жуйка испытывал сложности.
+             Для получения этой информации туда не уходит ваша авторизация, и поэтому запросы на вашу персональную ленту сервер не обрабатывает.
+            <br>
+            <br>
+             6.2 Запросы за графиками тоже ходят туда.
              <br>
              <br>
-            <b>НО</b> если вы используете нотификацию о сообщениях (не jabber/xmpp), тогда с целью авторизации на этом сервере
-              туда уходит (https) ваша жуйковская авторизация. Во время логина на ja.ip.rt.ru происходит проверка на возможность
+            7.1 <b>НО</b> если вы используете нотификацию о сообщениях (не jabber/xmpp), тогда с целью авторизации на этом сервере
+              туда уходит ваша жуйковская авторизация. Во время логина на ja.ip.rt.ru происходит проверка на возможность
               залогиниться на juick.com с этими данными, и затем эта информация не хранится.
               Это нужно для того, чтобы сторонний Вася не мог назваться вами и получить сформированные для вас данные
-              (ваши подписки, и, в будущем, ваши букмарки или что там еще будет за функциональность).
+              (ваши подписки, и, в будущем, ваши букмарки или что там еще будет за функциональность). Используется
               <br>
               <br>
-            <b>А если</b> вы еще и используете XMPP/Jabber, то ваши jabber-пароли хранятся в ОЗУ сервера, с целью восстановления соединения
+            7.2 <b>А если</b> вы еще и используете XMPP/Jabber, то ваши jabber-пароли хранятся в ОЗУ сервера, с целью восстановления соединения
             с jabber сервером, буде оно упадет. Стандартные предупреждения в таком случае звучат так: если хакеры
             взломают ja.ip.rt.ru, сделают снимок озу или стырят своп-файл, то они конечно всех поимеют. Хорошая новость
                 состоит в том, что сервер работает под управлением красноглазого gentoo, там лишь недырявая java и
                 ssh, устойчивый к brute force.
              <br>
+              <br>
+            8.1 <b>Расширенные фичи</b> Juick Advanced также требуют вашей жуйковской авторизации, которая уйдет https://ja.ip.rt.ru,
+            о чем вас обязательно предупредят перед использованием. Сюда относятся все персонализированные сервисы, начиная с "неотвеченного",
+            а также другие сервисы, нагружающие сервер особой нагрузкой. Какая-нибудь авторизация нужна как для исключения нецелевого использования сервиса, так и
+             для того, чтобы вашу персонализацию не использовал кто-то другой (см п. 7.1.) Как и в п. 7.1., механизм жуйковской авторизация
+             выбран автором для того, чтобы не вводить отдельную регистрацию на сервере juick advanced. Авторизация проверяется на juick.com только
+              однажды, после этого хранится ее хэш, что она проверена. Дискуссии на тему вариантов авторизации приветствуются.
+              <br>
+              <br>
+            8.2. Весь чувствительный трафик использует https, с привязкой к сертификату сервера.
              <hr/>
 
             Собранная анонимная информация будет использована для
@@ -985,6 +1005,12 @@
     <string name="FullsizeDownloadOverMobile">Fullsize downloads over mobile</string>
     <string name="WhenDownloading___">When downloading full size images, use wifi or mobile, otherwise queue until wifi
         available
+    </string>
+    <string name="SlideToDeleteItems">Slide to delete items</string>
+    <string name="UnneededItems_">(unneeded items)</string>
+    <string name="PrivacyWarning">Privacy Warning</string>
+    <string name="PressOkToTrust">Press OK if you trust Juick Advanced to validate your juick identity on juick advanced
+        server. Your password is never stored. Read p. 8.1 in privacy policy.
     </string>
 
 
