removed more theme refs better extxmpp reconnect out of memory errors handled more new reports

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -921,8 +921,18 @@
     <string name="UsageReportsPerWeek">Usage reports volume...</string>
     <string name="UsageReportsPerWeek2">Number of usage reports posted per week</string>
     <string name="JuickUsersPerMonth">Number of Juick users</string>
-    <string name="JuickUsersPerMonth2">Posting, commenting, new</string>
-    <string name="VersionInstalls">Version installs</string>
+    <string name="JuickUsersPerMonth2">...posting, commenting and registering</string>
+    <string name="JuickTrafficAllTime">Juick traffic all time</string>
+    <string name="JuickTrafficAllTime2">Posts and comments monthly</string>
+    <string name="JuickTrafficRecently">Juick recent traffic</string>
+    <string name="JuickTrafficRecently2">Posts and comments daily</string>
+    <string name="JuickPostLength">Average post sizes</string>
+    <string name="JuickPostLength2">During all juick existence</string>
+    <string name="JuickHoles">Private/Deleted posts</string>
+    <string name="JuickHoles2">Missing entries in sequence</string>
+    <string name="JuickWeekActivity">Activity by days of week</string>
+    <string name="JuickWeekActivity2">Compared with averages</string>
+    <string name="VersionInstalls">\'Juick Advanced\' installs</string>
     <string name="VersionInstalls2">Number of installations of each versions after release</string>
     <string name="ClassicUsers">\'Juick Classic\' users</string>
     <string name="ClassicUsers2">Number of \'juick classic\' browser addon daily users</string>
