--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -318,6 +318,11 @@
             <b>Апрель 2013, зимний билд</b>
             <ul>
             <li>
+            Черновики комментов. При выходе из треда, если что-то написано и не отправлено, предлагает записать черновик. Восстанавливает текст при входе в тот же тред,
+            да и просто можно использовать из другого места. Чтобы удалить черновик, восстановите и отредактируйте его в ноль или отправьте.
+            Разрешить черновики: <input type="checkbox" name="prefs.enableDrafts" #prefs.checked.enableDrafts#>
+            </li>
+            <li>
             Забацал \"Неотвеченные\", ура! Сканирует последний месяц вашей активности, и если находит или чужой коммент на ваш пост, или чужой ответ на ваш коммент,
             на которые не было вашего ответа с тех пор, и показывает в списке. Последние 20 штук, самые поздние - наверху. Если ткнуть - быстро открывается форма для того чтобы написать ответ.
             Если мессаг не предполагает ответа - его выкинуть пальцем вправо за пределы экрана, чтобы уведомление о нем не появлялось больше на глаза.
@@ -1032,6 +1037,7 @@
     <string name="NewMessageMenu">New message menu</string>
     <string name="InsteadOfLegacyMenu">..instead of legacy menu</string>
     <string name="LegacyMenu">Legacy Menu</string>
+    <string name="Drafts">Drafts</string>
 
 
 </resources>
